[gd_scene load_steps=26 format=2]

[ext_resource path="res://texture/units/selected.png" type="Texture" id=1]
[ext_resource path="res://texture/units/Player.png" type="Texture" id=2]
[ext_resource path="res://code/unit_logic/unit.gd" type="Script" id=3]
[ext_resource path="res://scenes/units/unite_SM.tscn" type="PackedScene" id=4]
[ext_resource path="res://texture/shaders/normal.tres" type="Material" id=5]
[ext_resource path="res://code/unit_logic/stats.gd" type="Script" id=6]

[sub_resource type="CapsuleShape2D" id=3]
height = 0.0

[sub_resource type="CircleShape2D" id=4]
radius = 103.0

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 18 ]
}

[sub_resource type="Animation" id=6]
resource_name = "atack_down"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=7]
resource_name = "atack_left"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=8]
resource_name = "atack_right"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=9]
resource_name = "atack_up"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=18]
resource_name = "die_down"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 55, 56, 57, 58, 59 ]
}

[sub_resource type="Animation" id=19]
resource_name = "die_left"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52, 53, 54 ]
}

[sub_resource type="Animation" id=20]
resource_name = "die_right"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44 ]
}

[sub_resource type="Animation" id=21]
resource_name = "die_up"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 45, 46, 47, 48, 49 ]
}

[sub_resource type="Animation" id=10]
resource_name = "idle_down"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=11]
resource_name = "idle_left"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=12]
resource_name = "idle_right"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "idle_up"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=14]
resource_name = "run_down"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=15]
resource_name = "run_left"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=16]
resource_name = "run_right"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=17]
resource_name = "run_up"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[node name="Unit" type="KinematicBody2D" groups=["unit"]]
material = ExtResource( 5 )
script = ExtResource( 3 )

[node name="stats" type="Node" parent="."]
script = ExtResource( 6 )

[node name="attack_range_ray" type="RayCast2D" parent="."]
position = Vector2( 0, -5 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5 )
shape = SubResource( 3 )

[node name="Selected" type="Sprite" parent="."]
visible = false
position = Vector2( 1, 0 )
texture = ExtResource( 1 )

[node name="AnimatedSprite" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( 1, -12 )
texture = ExtResource( 2 )
hframes = 60
frame = 18

[node name="Unite_SM" parent="." instance=ExtResource( 4 )]

[node name="Vision_range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision_range"]
visible = false
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/atack_down = SubResource( 6 )
anims/atack_left = SubResource( 7 )
anims/atack_right = SubResource( 8 )
anims/atack_up = SubResource( 9 )
anims/die_down = SubResource( 18 )
anims/die_left = SubResource( 19 )
anims/die_right = SubResource( 20 )
anims/die_up = SubResource( 21 )
anims/idle_down = SubResource( 10 )
anims/idle_left = SubResource( 11 )
anims/idle_right = SubResource( 12 )
anims/idle_up = SubResource( 13 )
anims/run_down = SubResource( 14 )
anims/run_left = SubResource( 15 )
anims/run_right = SubResource( 16 )
anims/run_up = SubResource( 17 )

[node name="Rays" type="Node2D" parent="."]

[node name="ray_right" type="RayCast2D" parent="Rays"]
rotation = 0.785398
enabled = true
exclude_parent = false
cast_to = Vector2( 30, 0 )
collision_mask = 2

[node name="ray_left" type="RayCast2D" parent="Rays"]
rotation = -0.785398
enabled = true
exclude_parent = false
cast_to = Vector2( 30, 0 )
collision_mask = 2

[node name="ray_right2" type="RayCast2D" parent="Rays"]
rotation = 1.309
enabled = true
exclude_parent = false
cast_to = Vector2( 30, 0 )
collision_mask = 2

[node name="ray_left2" type="RayCast2D" parent="Rays"]
rotation = -1.309
enabled = true
exclude_parent = false
cast_to = Vector2( 30, 0 )
collision_mask = 2

[node name="ray_front" type="RayCast2D" parent="Rays"]
enabled = true
exclude_parent = false
cast_to = Vector2( 30, 0 )
collision_mask = 2

[node name="ray_front2" type="RayCast2D" parent="Rays"]
rotation = 0.279253
enabled = true
exclude_parent = false
cast_to = Vector2( 30, 0 )
collision_mask = 2

[node name="ray_front3" type="RayCast2D" parent="Rays"]
rotation = -0.279253
enabled = true
exclude_parent = false
cast_to = Vector2( 30, 0 )
collision_mask = 2

[node name="stop_timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Abilities" type="Node" parent="."]

[node name="1_ability_timer" type="Timer" parent="Abilities"]
wait_time = 5.0
one_shot = true

[node name="2_ability_timer" type="Timer" parent="Abilities"]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="Vision_range" to="." method="_on_Vision_range_body_entered"]
[connection signal="body_exited" from="Vision_range" to="." method="_on_Vision_range_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="Unite_SM" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="stop_timer" to="Unite_SM" method="_on_stop_timer_timeout"]
